--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,35 @@
 version: '3.2'
 
 services:
-#  server:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    ports:
-#      - "8081:8081"
-#    restart: always
-#    environment:
-#      NAME: "server 1"
-#  server-2:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    ports:
-#      - "8080:8081"
-#    restart: always
-#    environment:
-#      NAME: "server 2"
-#  openresty:
-#    image: openresty/openresty:alpine
-#    ports:
-#      - "3000:3000"
-#    restart: always
-#    volumes:
-#      - ./config/nginx:/etc/nginx/conf.d/
-#      - ./lua:/etc/nginx/lua
-  mysql-master:
+  #  server:
+  #    build:
+  #      context: .
+  #      dockerfile: Dockerfile
+  #    ports:
+  #      - "8081:8081"
+  #    restart: always
+  #    environment:
+  #      NAME: "server 1"
+  #  server-2:
+  #    build:
+  #      context: .
+  #      dockerfile: Dockerfile
+  #    ports:
+  #      - "8080:8081"
+  #    restart: always
+  #    environment:
+  #      NAME: "server 2"
+  #  openresty:
+  #    image: openresty/openresty:alpine
+  #    ports:
+  #      - "3000:3000"
+  #    restart: always
+  #    volumes:
+  #      - ./config/nginx:/etc/nginx/conf.d/
+  #      - ./lua:/etc/nginx/lua
+  mysql-slave:
     #Container name
-    container_name: mysql-master
+    container_name: mysql-slave
     #Image name docker pull in advance mysql:5.7.30  Otherwise it will be very slow
     image: mysql:5.7.30
     #Container restart after docker restart
@@ -67,9 +67,9 @@ services:
       - /etc/timezone:/etc/timezone
       #The mount directory / var / lib / MySQL is the data of MySQL
       - /data/mysql5matser:/var/lib/mysql
-  mysql-replic:
+  mysql-master2:
     #Container name
-    container_name: mysql-replic
+    container_name: mysql-master2
     #Image name docker pull in advance mysql:5.7.30  Otherwise it will be very slow
     image: mysql:5.7.30
     #Container restart after docker restart
@@ -106,6 +106,84 @@ services:
       - /data/mysql5replic:/var/lib/mysql
     ports:
       - 3308:3306
+  mysql-slave2:
+    #Container name
+    container_name: mysql-slave2
+    #Image name docker pull in advance mysql:5.7.30  Otherwise it will be very slow
+    image: mysql:5.7.30
+    #Container restart after docker restart
+    restart: always
+    #Choose self built bridge network
+    #    networks:
+    #      network:
+    #        ipv4_address: 172.2.0.15
+    #        aliases:
+    #          - mysql-replic
+    networks:
+      - mysql_replic
+    command:
+      - --server-id=3
+      - --gtid-mode=ON
+      - --enforce-gtid-consistency=ON
+      - --master-info-repository=TABLE
+      - --relay-log-info-repository=TABLE
+      - --binlog-checksum=NONE
+      - --log-slave-updates=ON
+      - --log-bin=slave-bin
+      - --binlog-format=ROW
+      - --auto_increment_increment=2
+      - --auto_increment_offset=1
+    environment:
+      #Time zone
+      - TZ=Asia/Shanghai
+      #Default password configuration
+      - MYSQL_ROOT_PASSWORD=123456
+    volumes:
+      - /etc/localtime:/etc/localtime
+      - /etc/timezone:/etc/timezone
+      #The mount directory / var / lib / MySQL is the data disk
+      - /data/mysql5replic-1:/var/lib/mysql
+    ports:
+      - 3309:3306
+  mysql-master:
+    #Container name
+    container_name: mysql-master
+    #Image name docker pull in advance mysql:5.7.30  Otherwise it will be very slow
+    image: mysql:5.7.30
+    #Container restart after docker restart
+    restart: always
+    #Choose self built bridge network
+    #    networks:
+    #      network:
+    #        ipv4_address: 172.2.0.15
+    #        aliases:
+    #          - mysql-replic
+    networks:
+      - mysql_replic
+    command:
+      - --server-id=4
+      - --gtid-mode=ON
+      - --enforce-gtid-consistency=ON
+      - --master-info-repository=TABLE
+      - --relay-log-info-repository=TABLE
+      - --binlog-checksum=NONE
+      - --log-slave-updates=ON
+      - --log-bin=slave-bin
+      - --binlog-format=ROW
+      - --auto_increment_increment=2
+      - --auto_increment_offset=1
+    environment:
+      #Time zone
+      - TZ=Asia/Shanghai
+      #Default password configuration
+      - MYSQL_ROOT_PASSWORD=123456
+    volumes:
+      - /etc/localtime:/etc/localtime
+      - /etc/timezone:/etc/timezone
+      #The mount directory / var / lib / MySQL is the data disk
+      - /data/mysql5replic-2:/var/lib/mysql
+    ports:
+      - 3310:3306
 networks:
   mysql_replic:
     name: mysql_replic
